refactor: use Map.copyOf (Java 10+)
Motivation:
Replace Collections.unmodifiableMap(new HashMap<>(...)) with the
more concise Map.copyOf() available since Java 10.

Modification:
Use Map.copyOf() which creates an immutable copy in a single call,
eliminating the intermediate mutable HashMap.

Result:
Cleaner, more concise code with fail-fast null rejection.